Table platform {
  id text [pk, note: "uuid"]
  name text [not null, unique, note: "eg: #someruser on Twitter"]
  type enum [not null, note: "account, team, application"]
  platform_type enum [not null, note: "discord, twitter, instagram, facebook, etc"] 
  url text [note: "eg: https://twitter.com/someuser"]  
  platform_id text [note: "id of the account on the other platform"] 
  platform_secret text [note: "hashed - secret token"]
  platform_token text [note: "hashed - access token"]
  is_nsfw bool [not null, default: false, note: "nsfw account, don't show it"]
  is_verified bool [not null, default: false, note: "verified account"]
  Note: "An account on another platform, linked to an user. Can be used to display a profile page or to login."
}

Table user {
  id text [pk, note: "uuid"]
  identifier text [not null, unique, note: "readable id"]
  username text [not null, unique, note: "eg: some_user or someuser"]
  email text [unique, note: "email"]
  password text [note: "hashed"]  
  allow_nsfw bool [not null, default: false, note: "allow nsfw content"]
  // allow_free_follow bool [not null, default: false, note: "allow free follow"]
  // allow_follow_request bool [not null, default: false, note: "allow follow request"]
  tags bigint [not null, default: 0, note: "tags of the user"]
  settings json [not null, note: "settings of the user"]
  Note: "An human"
}

Table tag {
  id text [pk, note: "uuid"]
  identifier text [not null, unique, note: "readable id"]
  name text [not null, unique, note: "eg: Some Tag"]
  description text [note: "eg: Some Tag is a tag"]
  is_nsfw bool [not null, default: false, note: "nsfw tag, don't show in search"] 
  is_verified bool [not null, default: false, note: "verified tag, don't show in search if not verified"]
  is_blocked bool [not null, default: false, note: "blocked tag, don't show in search"]
  blocked_reason text [note: "reason of the blocked tag"]
  blocked_by_id text [note: "id of the user who blocked the tag"]
  blocked_at timestamp [note: "date of the blocked tag"]
  icon text [note: "url of the icon or id of the file"]
  color text [note: "color of the tag"]
  Note: "A tag, allow to categorize profiles"
}

Ref: user.id < tag.blocked_by_id [delete: set null, update: no action]

Table user_has_platform {
  user_id text [pk]
  platform_id text [pk]
  description text [note: "description of the related account"]
  settings json [not null, note: "settings of the related account"]
  visibility enum [not null, note: "public, private, etc"]
  Note: "A team has multiple related accounts"
}

Ref: user.id < user_has_platform.user_id [delete: cascade, update: no action]
Ref: platform.id < user_has_platform.platform_id [delete: cascade, update: no action] 

Table profile {
  id text [pk, note: "uuid"]
  user_id text [not null]
  identifier text [not null, unique, note: "readable id"]
  name text [not null, note: "eg: Some Profile", default: "Some User"]
  pseudo text [not null, note: "eg: Some User"] 
  display_user_tags bigint [not null, default: 0, note: "tags to display in the profile, user need to have the tag"]
  avatar text [note: "url of the avatar or id of the file"]
  banner text [note: "url of the banner or id of the file"]
  primary_color text [note: "primary color of the user profile"]
  secondary_color text [note: "secondary color of the user profile"]
  emoji text [note: "emoji of the user profile"]
  status text [note: "status of the user profile"]
  about_me text [note: "about me of the user profile"]
  languages bigint [not null, default: 0, note: "languages of the user profile"]
  tags bigint [not null, default: 0, note: "tags of the user profile"]
  Note: "A profile, allow to customize a user profile. A user has multiple profiles. An user need at least one profile"
}

Ref: user.id < profile.user_id [delete: cascade, update: no action]

Table profile_has_tag {
  profile_id text [pk]
  tag_id text [pk]
  Note: "A profile has multiple tags"
}

Ref: profile.id < profile_has_tag.profile_id [delete: cascade, update: no action]
Ref: tag.id < profile_has_tag.tag_id [delete: cascade, update: no action]

Table profile_has_platform {
  profile_id text [pk]
  platform_id text [pk]
  Note: "A profile has multiple related accounts"
}

Ref: profile.id < profile_has_platform.profile_id [delete: cascade, update: no action]
Ref: platform.id < profile_has_platform.platform_id [delete: cascade, update: no action]
  
Table team {
  id text [pk, note: "uuid"]
  identifier text [not null, unique, note: "readable id"]
  type enum [not null, note: "like community, enterprise, etc"]
  name text [not null, note: "eg: Some team"]
  short_description text [note: "eg: Some team is a team of some people"]
  description text [note: "eg: long description of the team with markdown"]
  categories bigint [not null, default: 0, note: "tags of the team"]
  languages bigint [not null, default: 0, note: "languages of the team"]
  tags bigint [not null, default: 0, note: "tags of the team"]
  user_can_join bool [not null, default: true, note: "allow users to join the team"]
  icon text [note: "url of the icon or id of the file"]
  banner text [note: "url of the banner or id of the file"]
  primary_color text [note: "primary color of the team"]
  secondary_color text [note: "secondary color of the team"] 
  settings json [not null, note: "settings of the team"]
  owner_id text [note: "id of the owner of the team"]
  Note: "A team, allow to create communities"
} 

Ref: user.id < team.owner_id [delete: set null, update: no action]

Table team_has_platform {
  team_id text [pk]
  platform_id text [pk]
  description text [note: "description of the related account"]
  settings json [not null, note: "settings of the related account"]
  visibility enum [not null, note: "public, private, etc"]
  Note: "A team has multiple related accounts"
}

Ref: team.id < team_has_platform.team_id [delete: cascade, update: no action]
Ref: platform.id < team_has_platform.platform_id [delete: cascade, update: no action] 

Table team_has_tag {
  team_id text [pk]
  tag_id text [pk]
  Note: "A team has multiple tags"
}

Ref: team.id < team_has_tag.team_id [delete: cascade, update: no action]
Ref: tag.id < team_has_tag.tag_id [delete: cascade, update: no action]

Table team_role {
  id text [pk, note: "uuid"]
  name text [not null, unique, note: "eg: Some Role"]
  description text [note: "eg: Some Role is a role of some team"]
  is_private bool [not null, default: false, note: "private role, don't show in search"]
  permissions bigint [not null, default: 0, note: "permissions of the role"]
  order int [not null, default: 0, note: "order of the role in the list of roles of the team"]
  category text [note: "category of the role"]
  color text [note: "color of the role"]
  is_auto_attributable bool [not null, default: false, note: "allow to an user to auto-assign the role"]
  is_managed bool [not null, default: false, note: "managed by the official application"]
  new_member_role bool [not null, default: false, note: "role given to new members"]

  team_id text [not null]
  Note: "A role, allow to customize permissions of a team"
}

Ref: team.id < team_role.team_id [delete: cascade, update: no action]

Table member {
  id text [pk, note: "uuid"]
  user_id text [not null]
  team_id text [not null]
  profile_id text [not null, note: "id of the profile used in the team"]
  invite_id text [note: "id of the invite used to join the team"]
  Note: "A user has a team"

  indexes {
    (user_id, team_id) [unique] 
  }
}

Ref: user.id < member.user_id [delete: cascade, update: no action]
Ref: team.id < member.team_id [delete: cascade, update: no action]
Ref: profile.id < member.profile_id [delete: set null, update: no action]
Ref: team_invite.id < member.invite_id [delete: set null, update: no action]

Table team_invite {
  id text [pk, note: "uuid"]
  team_id text [note: "id of the team to join"]
  member_id text [note: "id of the member who created the invite"]
  label text [note: "label of the invite"]
  code text [not null, unique, note: "code of the invite"]
  max_uses int [note: "max uses of the invite"]
  uses int [not null, default: 0, note: "uses of the invite"]
  expires_at timestamp [note: "date of expiration of the invite"]
  settings json [note: "settings of the invite"]
  Note: "An invite, allow to join a team"
}

Ref: team.id < team_invite.team_id [delete: cascade, update: no action]
Ref: member.id < team_invite.member_id [delete: cascade, update: no action]

Table member_role {
  user_in_team text [pk] 
  role_id text [pk]
  added_by_id text [note: "id of the user who added the role"] 
  Note: "A user has multiple roles in teams"
}

Ref: member.id < member_role.user_in_team [delete: cascade, update: no action]
Ref: team_role.id < member_role.role_id [delete: cascade, update: no action]
Ref: user.id < member_role.added_by_id [delete: set null, update: no action]